c4prj2_input/grade.txt
Grading at Wed Mar 10 18:43:23 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:39:38: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
     for (int j = 0 ; j < fc->decks[i]->n_cards ; j++){
                                      ^
Compilation of future.c failed

Overall Grade: F
